@@ -1,7 +1,11 @@
 unity (7.4.0+16.04.20160526.1-0ubuntu2) UNRELEASED; urgency=medium
 
+  [ Eleni Maria Stea ]
   * PanelView: Don't draw it if the geo doesn't intersect the monitor
     geo (as in ezoom)
+
+  [ Andrea Azzarone ]
+  * Add whitelist for auto-repated keys. (LP: #1586491)
 
  -- Eleni Maria Stea <elenimaria.stea@canonical.com>  Wed, 29 Jun 2016 18:06:42 +0200
 
